--- a/templates/login.html
+++ b/templates/login.html
@@ -21,7 +21,7 @@ Login
         {{ wtf.form_field(form.remember) }}
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
       </form>
-      <button class="btn btn-lg btn-primary btn-block" type="submit"><a href="{{ url_for('registration') }}">Register</a></button>
+      <a href="{{ url_for('registration') }}"><button class="btn btn-primary btn-block registerButton" type="submit">Register</button></a>
 
     </div> <!-- /container -->
 
