--- a/templates/index.html
+++ b/templates/index.html
@@ -10,17 +10,16 @@ Welcome to eTimeCard!
 {% endblock %}
 
 {% block content %}
-    <div class="container">
-      <div class="jumbotron">
-        <h1 class="display-3">eTimeCard</h1>
-        <p class="lead">Revolutionising Purdue CS's timecard system. </p>
-        <hr class="my-4">
-        <p>Tired of turning in your time cards every two weeks? Don't worry! Do it now on the go, whenever you like.</p>
-        <p class="lead">
-        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-        </p>
+      <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <h1 class="display-3">Revolutionising Purdue CS's timecard system.</h1>
+          <p class="lead">Tired of turning in your time cards every two weeks? Don't worry! Do it now on the go, whenever you like.</p>
+          <p class="lead">
+            <a class="btn btn-primary btn-lg" href="login" role="button" id="logInBtn">Log in</a>
+          </p>
+        </div>
       </div>
-    </div> <!-- /container -->
+
 
 
 {% endblock %}
