--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,40 @@ Welcome to eTimeCard!
           </p>
         </div>
       </div>
+      <div class = "container" id="registerContainer">
+        <h3 class="lead" id="registerText"> Don't have an account yet? Register as a TA or an instructor here. </h3>
+        <p class="lead" id="registerButton">
+          <a class="btn btn-primary btn-lg" href="registration" role="button" id="logInBtn">Register</a>
+        </p>
+      </div>
+      <div class="container" id = "features">
+      <div class="row">
+        <div class="col-sm-6" id="utaFeatures">
+          <div class="card">
+            <div class="card-body">
+              <h3 class="card-title">What's here for TAs?</h4>
+              <ul >
+                <li class="featureItem">Clock in/out electronically on the go</li>
+                <li class="featureItem">Review hours per pay period</li>
+                <li class="featureItem">No need to turn in time cards physically</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6" id="instructorFeatures">
+          <div class="card">
+            <div class="card-body">
+              <h3 class="card-title">What's here for instructors?</h4>
+              <ul>
+                <li class="featureItem">Review all time cards on one dashboard</li>
+                <li class="featureItem">Sign time cards with just one click</li>
+                <li class="featureItem">Categorize time cards according to class.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
 
