--- a/templates/registration.html
+++ b/templates/registration.html
@@ -19,10 +19,10 @@ Sign Up
     {{ wtf.form_field(form.username) }}
     {{ wtf.form_field(form.email) }}
     {{ wtf.form_field(form.password) }}
-    <select class="form-control">
+    <!-- <select class="form-control">
           <option value="ta"> Teaching Assistant</option>
           <option value="instructor"> Instructor </option>
-    </select>
+    </select> -->
     <button class="btn btn-lg btn-primary btn-block" type="submit" id="signUpButton">Sign Up</button>
   </form>
 
