--- a/templates/login.html
+++ b/templates/login.html
@@ -19,7 +19,7 @@ Login
         {{ wtf.form_field(form.username) }}
         {{ wtf.form_field(form.password) }}
         {{ wtf.form_field(form.remember) }}
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" id="signInBtn">Sign in</button>
       </form>
       <a href="{{ url_for('registration') }}"><button class="btn btn-primary btn-block registerButton" type="submit">Register</button></a>
 
