Styling the dashboards page

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -12,6 +12,7 @@ Dashboard
 
 {% block content %}
     <div class="container">
+      <div id="recordForm">
       <form>
         <div class="form-group">
           <label for="taskDesc">Description</label>
@@ -20,6 +21,7 @@ Dashboard
         <button type="submit" class="btn btn-primary">Record clock in</button>
         <button type="submit" class="btn btn-primary">Record clock out</button>
       </form>
+      </div>
     </div> <!-- /container -->
 
 
