--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -15,6 +15,7 @@ Dashboard
       <div id="recordForm">
       <form class="form-signin" method="POST" action="/start">
         <h2 class="form-signin-heading">What is your goal for today?</h2>
+        {{ form.hidden_tag() }}
         {{ wtf.form_field(form.description) }}
         <button type="submit" class="btn btn-primary">Record clock in</button>
       </form>
