--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -17,10 +17,10 @@ Dashboard
         <h2 class="form-signin-heading">What is your goal for today?</h2>
         {{ form.hidden_tag() }}
         {{ wtf.form_field(form.description) }}
-        <button type="submit" class="btn btn-primary">Record clock in</button>
+        <button type="submit" class="btn btn-primary recordBtns">Record clock in</button>
       </form>
       <form class="form-signin" method="POST" action="/end">
-        <button type="submit" class="btn btn-primary">Record clock out</button>
+        <button type="submit" class="btn btn-primary recordBtns">Record clock out</button>
       </form>
       </div>
     </div> <!-- /container -->
