--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -20,7 +20,7 @@ Dashboard
         <button type="submit" class="btn btn-primary recordBtns">Record clock in</button>
       </form>
       <form class="form-signin" method="POST" action="/end">
-        <button type="submit" class="btn btn-primary recordBtns">Record clock out</button>
+        <button type="submit" class="btn btn-primary" id="clockOut">Record clock out</button>
       </form>
       </div>
     </div> <!-- /container -->
