--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -24,6 +24,8 @@ Dashboard
     </div>
     <div id="clockOut">
       <form class="form-signin" method="POST" action="/end">
+        {{ form.hidden_tag() }}
+        {{ wtf.form_field(form.username) }}
         <button type="submit" class="btn btn-primary">Record clock out</button>
       </form>
     </div>
