--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -19,17 +19,13 @@ Dashboard
         {{ form.hidden_tag() }}
         {{ wtf.form_field(form.username) }}
         {{ wtf.form_field(form.description) }}
-        <button type="submit" class="btn btn-primary recordBtns">Record clock in</button>
+        {{ wtf.form_field(form.timeWorked) }}
+        {{ wtf.form_field(form.date) }}
+
+        <button type="submit" class="btn btn-primary recordBtns">Record hours worked</button>
       </form>
     </div>
-    <div id="clockOut">
-      <form class="form-signin" method="POST" action="/end">
-        {{ form.hidden_tag() }}
-        {{ wtf.form_field(form.username) }}
-        <button type="submit" class="btn btn-primary">Record clock out</button>
-      </form>
     </div>
-      </div>
     </div> <!-- /container -->
 
 
