--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -14,7 +14,7 @@ Dashboard
     <div class="container">
       <div id="recordForm">
         <div id="clockIn">
-      <form class="form-signin" method="POST" action="/showTable">
+      <form class="form-signin" method="POST" action="/dashboard">
         <h2 class="form-signin-heading">What is your goal for today?</h2>
         {{ form.hidden_tag() }}
         {{ wtf.form_field(form.username) }}
