--- a/templates/showTables.html
+++ b/templates/showTables.html
@@ -2,7 +2,7 @@
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}
-Dashboard
+My Entries
 {% endblock %}
 
 {% block styles %}
@@ -12,20 +12,7 @@ Dashboard
 
 {% block content %}
     <div class="container">
-      <div id="recordForm">
-        <div id="clockIn">
-      <form class="form-signin" method="POST" action="/showTables">
-        <h2 class="form-signin-heading">What is your goal for today?</h2>
-        {{ form.hidden_tag() }}
-        {{ wtf.form_field(form.username) }}
-        {{ wtf.form_field(form.description) }}
-        {{ wtf.form_field(form.timeWorked) }}
-        {{ wtf.form_field(form.date) }}
 
-        <button type="submit" class="btn btn-primary recordBtns">Record hours worked</button>
-      </form>
-    </div>
-    </div>
 
     <div class="container">
       {% if inp %}
